*Empty MediaWiki Message*

--- a/Wikiwoordebook.mw
+++ b/Wikiwoordebook.mw
@@ -1,6 +1,7 @@
+[[Bestaand:WiktionaryNds.svg|thumb|Logo van de neadersassiske Wikiwoordebook / Wikiwöörbook]]
 '''Wikiwoordebook''' (of: ''Wiktionary'') is en projekt van de [[Wikimedia Foundation|Wikimedia-stichtinge]] dat as dool hevt et kreeren van en vry togangelik, meyrspråkig [[woordebook]].
 
-De oaverkupelende name van et projekt, ''Wiktionary'', is en [[mengwoord]] van ''wiki'' en ''dictionary'' (''woordebook''). De [[Nedersaksisch|neadersassiske]] versy hit '''Wikiwoordebook''' / '''Wikiwöörbook''', de freeske versy hit ''Wikiwurdboek'', de limbörgske versy ''Wiktionair'', de neaderlandske versy ''WikiWoordenboek'' en de afrikaanske versy hit ''WikiWoordeboek''.
+De oaverkupelende name van et projekt, ''Wiktionary'', is en [[mengwoord]] van ''wiki'' en ''dictionary'' (''woordebook''). De [[Nedersaksisch|neadersassiske]] versy hit '''Wikiwoordebook''' / '''Wikiwöörbook''' en is en mandeylig projekt van alle neadersassiske dialekten, souwel van neaderlandske as de düütske kante van de pål. Et vöärblad is eskreaven in de [[Nysassiske Skryvwyse]] üm underlinge verstånbårheid te vergrouten. Neadersassiske lemmas maggen ouk andere bekende skryvwysen gebrüken. 
 
 == Globale upset ==
 Et projekt verstrekt informaty oaver språkkündige eigenskappen (as [[skryvwyse]] en eventuele spellingsvarianten, [[Etymology|etymologiske]] herkumst vöär souveare as dat bekend is, [[Verkleinwoord|verkleinde]] vormen, [[meyrvold]] en [[afleidingen]]) mär ouk oaversettingen in andere språken.
