--- a/Ni'jlusen.mw
+++ b/Ni'jlusen.mw
@@ -108,6 +108,7 @@ In dizze lieste vin ie bekende mèensen die op Ni'jlusen woont, of ewoond hebt.
 * [[Ryk de Boer]] (ps. van Riek van der Galiën-De Boer, 1907-1988), romanschriefster
 * [[Benjamin Boers]] (1871-1952), communistisch predikaant
 * [[Sander Borgers]] (1917-1985), NSB'er en SS'er
+* [[Chris Canter]] (1980), schriever en dichter in 't Ni'jlusegers
 * [[Klazien Bijker-Van Hulst]] (1931), dichteres en verhalenschriefster
 * [[Geert Jan Brader]] (1960), muzikaant
 * [[Willem Jan van Dedem|Willem Jan baron van Dedem]] (1776-1851), financier van de [[Dedemsvaort (kenaal)|Dedemsvaort]]
