--- a/Wikiwoordebook.mw
+++ b/Wikiwoordebook.mw
@@ -18,7 +18,7 @@ Sinds [[1 meie|1 mei]] [[2004]] binnen der ouk andersspråkige Wikiwoordeboken b
 Vöäle lemmas binnen mid en [[bot]] maked dee lemmas üüt andere woordeboken importeert. De [[Fransk|franske]] en [[Vietnameesk|vietnameeske]] versys importeerden groute deylen van et ''[[Free Vietnamese Dictionary Project]]''. De franske versy groide in 2006 mirakels vlugge wat vöär en grout deyl te danken was an bots dee üüt vrye woordeboken sou as de [[Dictionnaire de l'Académie française]] importeerden.
 
 ==Üütgaande verwysingen==
-* [[:nds:wikt:Wiktionary:Hööftsiet|Hööftsiet van de neadersassiske Wikiwoordebook]]
+* [[:nds:wikt:|De neadersassiske Wikiwoordebook]]
 
 {{Dialekt|wvel||Nysassiske Skryvwyse}}
 
