--- a/Afrikaans-Amerikaans.mw
+++ b/Afrikaans-Amerikaans.mw
@@ -1,7 +1,4 @@
-
-I hate being a American Gypsy. I wanna kill myself.
-
-'''Vette tekst''''''Afrikaans-Amerikaans''', of '''Afro-Amerikaans''' ([[Engels]]: ''African-American'') is n naamn den at meesttieds verwis noar zwarte leu oet [[Verienigde Staoten van Amerika|Amerika]] dee at ofstamt van [[Afrika]]anse slaawn dee at töt an de [[slaweriejeofskaffing]] van [[18 december]] [[1865]] noar Amerika deporteerd zeent, um doar op verskeaidene maneern vuur de blaankn te woarkn. Wieters kan t te maakn hebn met verskeaidene gebroekn (bepoalde oeterings van kultuur, muziek en sproakwieze) of vuurwoarpn dee at met disse leu met zeent ekömn.
+'''Afrikaans-Amerikaans''', of '''Afro-Amerikaans''' ([[Engels]]: ''African-American'') is n naamn den at meesttieds verwis noar zwarte leu oet [[Verienigde Staoten van Amerika|Amerika]] dee at ofstamt van [[Afrika]]anse slaawn dee at töt an de [[slaweriejeofskaffing]] van [[18 december]] [[1865]] noar Amerika deporteerd zeent, um doar op verskeaidene maneern vuur de blaankn te woarkn. Wieters kan t te maakn hebn met verskeaidene gebroekn (bepoalde oeterings van kultuur, muziek en sproakwieze) of vuurwoarpn dee at met disse leu met zeent ekömn.
 
 == Afrikaans-Amerikaansn in t niejs ==
 Op [[4 november]] [[2008]] wör vuur t eerst in de geskiedenisse nen Afro-Amerikaan [[presideant]] van [[Verienigde Staoten van Amerika|Amerika]]. [[Barack Obama]] is n 44sten presideant van Amerika, en zal vuur 4 joar n belangriek man wean op t wearldtoneel.
