--- a/Autorodeo.mw
+++ b/Autorodeo.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:AutorodeoHeufdfoto.jpg|thumb|340px|right|Twei wagens knapt op mekare in een autorodeo]]
+[[Ofbeelding:AutorodeoHeufdfoto.jpg|thumb|340px|Twei wagens knapt op mekare in een autorodeo]]
 Een '''autorodeo''' is een evenement daoras ze in Oost-Nederlaand drok op bint, waorbi'j een stok of vieftien olde auto's rondriedt op een deur een [[gröppel]] umringd [[gres|grösveld]] en tègen mekare anknalt. De leste auto die as nog rieden kan, is de winnaar.
 
 't Evenement is vake köppeld an een [[karmse]], een feesttent mit meziek, enzowieder.
@@ -30,13 +30,15 @@ Variaanten op de autorodeo bint ok in aandere laanden bekend; zo mut de [[Verien
 Fans van banger racing gaot vake maank dizze laanden de grèenze oaver umme de evenementen te bezuken.
 
 ==Anhaling==
-:''Met de pens vol gif, stoa ik an de start 
-:''Zes cylinders brult onder mien gat 
-:''Zo hard ak kan, trea-j ik op 't gas 
-:'' 't Volk dat steet te kieken hult zich vast 
-:''Kogellagers die uut mien piepe barst
+<poem style="margin-left:1.5em; font-style:italic">
+Met de pens vol gif, stoa ik an de start
+Zes cylinders brult onder mien gat
+Zo hard ak kan, trea-j ik op 't gas
+'t Volk dat steet te kieken hult zich vast
+Kogellagers die uut mien piepe barst
+</poem>
 
-Uut ''Autorodeo'' deur [[Jovink en de Voederbietels]]
+Uut ''Autorodeo'' deur [[Jovink en de Voederbietels]].
 
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
