--- a/De_Rieverst.mw
+++ b/De_Rieverst.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Kerk IJhorst.jpg|thumb|right|350px|Hervörmde karke van De Rieverst]]
+[[Ofbeelding:Kerk IJhorst.jpg|thumb|350px|Hervörmde karke van De Rieverst]]
 '''De Rieverst''' of ''' 't Rieverst''' ([[Nederlaands]]: '''IJhorst''') is een dörp in de [[Stappest (gemiente)|gemiente Stappest]] in de [[Nederlaand|Nederlaanse]] [[previncie]] [[Aoveriessel]]. 't Dörp lig in 't [[Riestdal]] op de grèenze van Aoveriessel en [[Drenthe]], krek onder 't Drèentse dörp [[De Wiek]]. 't Hef 1500 inwoners (2019). Mit de dörpen [[Stappest]] en [[Roevène]] en de [[buurtschop]]pen [[Hamingen]], [[Haalfweg (Stappest)|Haalfweg]], [[De Punt (Stappest)|De Punt]] en [[Lankhorst]] vörmt De Rieverst de gemiente Stappest.
 
 == Ontstaon ==
@@ -23,12 +23,14 @@ Der is iene [[basisonderwies (Nederlaand)|basisschoele]], OBS De Iekmulder. An s
 De [[streektaal]] van De Rieverst is 't [[Zuudwest-Zuud-Drèents]], det bij 't [[Nedersaksisch]] heurt.
 
 === Citaot ===
-:''Waor langs Drente een mooi riviertien stroomt
-:''Waor um grune weide hoge bomen zoomt
-:''Waor nog meinsen woont die tevreden bint
-:''Daor lig 't Rieverst, dorpien waor ik geboren bin
+<poem style="margin-left:1.5em; font-style:italic">
+Waor langs Drente een mooi riviertien stroomt
+Waor um grune weide hoge bomen zoomt
+Waor nog meinsen woont die tevreden bint
+Daor lig 't Rieverst, dorpien waor ik geboren bin
+</poem>
 
-Uut [http://www.historieijhorst.nl/p23.html ''Het Rieverst Dorpien''] deur Arend Klomp
+Uut [http://www.historieijhorst.nl/p23.html ''Het Rieverst Dorpien''] deur Arend Klomp.
 
 == Uutgaonde verwiezing ==
 *[http://www.derieverst.nl/ Portaol De Rieverst]
