--- a/De_Rieverst.mw
+++ b/De_Rieverst.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Kerk IJhorst.jpg|thumb|350px|Hervörmde karke van De Rieverst]]
-'''De Rieverst''' of ''' 't Rieverst''' ([[Nederlaands]]: '''IJhorst''') is een dörp in de [[Stappest (gemiente)|gemiente Stappest]] in de [[Nederlaand|Nederlaanse]] [[previncie]] [[Aoveriessel]]. 't Dörp lig in 't [[Riestdal]] op de grèenze van Aoveriessel en [[Drenthe]], krek onder 't Drèentse dörp [[De Wiek]]. 't Hef 1500 inwoners (2019). Mit de dörpen [[Stappest]] en [[Roevène]] en de [[buurtschop]]pen [[Hamingen]], [[Haalfweg (Stappest)|Haalfweg]], [[De Punt (Stappest)|De Punt]] en [[Lankhorst]] vörmt De Rieverst de gemiente Stappest.
+'''De Rieverst''' of ''' 't Rieverst''' ([[Nederlaands]]: '''IJhorst''') is een dörp in de [[Stappest (gemiente)|gemiente Stappest]] in de [[Nederlaand|Nederlaanse]] [[previncie]] [[Aoveriessel]]. 't Dörp lig in 't [[Riestdal]] op de grèenze van Aoveriessel en [[Drenthe]], krek onder 't Drèentse dörp [[De Wiek (Drenthe)|De Wiek]]. 't Hef 1500 inwoners (2019). Mit de dörpen [[Stappest]] en [[Roevène]] en de [[buurtschop]]pen [[Hamingen]], [[Haalfweg (Stappest)|Haalfweg]], [[De Punt (Stappest)|De Punt]] en [[Lankhorst]] vörmt De Rieverst de gemiente Stappest.
 
 == Ontstaon ==
 Mit de ontginning van 't bosgebied wördden anevöngen rond 1100. 't Veurnaamste gewas det de lu bebouwden was [[raai|rogge]]. In 1236 stichtte de [[bisdom Utrecht|bisschop van Utrecht]] op de plekke van 't hudige dörp de parochie Restina, een [[Latien|Latiense]] verwiezing naor 't hier stromende reviertien de [[Riest (revier)|Riest)]]. De parochie mit heur karke völt onder 't [[Zwartewaterklooster]] bij [[Asselt]].
