--- a/Neijaorskoek.mw
+++ b/Neijaorskoek.mw
@@ -4,12 +4,14 @@ As 't deeg maokt is, drokt ze een klein bollegien in een [[kniepiezer]] en legt 
 
 De schriefster [[Ali Brals-Luinge]] oet [[Grol]] schreef: ''"In de mieste hoeshollings zaten de vrouwlu daogenlang te knieperties en joskoeken bakken. Dat gebeurde vaok in 't stookhok. Daor stun de kookkachel of de aol [[klomkachel]] glunig rood."'' Ze memoreerde wieder dat vroeger de kinder de buurt opgungen um iederien 't neijaor of te winnen en daorbij zungen:
 
-:''Gelukkig neijaor
-:''He'j de joskoeken gaor?
-:''Een zeupie erbij,
-:''Is goed veur mij,
-:''Maor niet veur Jan,
-:''Die pist er van.
+<poem style="margin-left:1.5em; font-style:italic">
+Gelukkig neijaor
+He'j de joskoeken gaor?
+Een zeupie erbij,
+Is goed veur mij,
+Maor niet veur Jan,
+Die pist er van.
+</poem>
 
 ==Bronnen==
 *Brals-Luinge, Ali  (1977), ''en toen..... zag ik.....'', Assen: Hummelen
