Verwysing nå döärverwyssyde repareerd ([[Rogge]] nå [[raai]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Neijaorskoek.mw
+++ b/Neijaorskoek.mw
@@ -1,4 +1,4 @@
-De '''neijaorskoek''', ok wel '''joskoek''', is een traditioneel [[Drenthe|Drèents]] gebak dat tussen [[kìrsttied|karst]] en [[nijjoar|neijaor]] bakken wordt. De neijaorskoek is vergeliekbaor mit de [[Grunnen (provìnzie)|Grunnings-]][[Oostfraislaand|Oostfriese]] [[spekdik]], maor de spekdik hef een dikke zachte structuur, terwiel de neijaorkoek dun en haard is en gien spek bevat. Ok wordt de neijaorskoek vaoker maokt van [[garst]] as van [[rogge]], zoas de spekdik. 
+De '''neijaorskoek''', ok wel '''joskoek''', is een traditioneel [[Drenthe|Drèents]] gebak dat tussen [[kìrsttied|karst]] en [[nijjoar|neijaor]] bakken wordt. De neijaorskoek is vergeliekbaor mit de [[Grunnen (provìnzie)|Grunnings-]][[Oostfraislaand|Oostfriese]] [[spekdik]], maor de spekdik hef een dikke zachte structuur, terwiel de neijaorkoek dun en haard is en gien spek bevat. Ok wordt de neijaorskoek vaoker maokt van [[garst]] as van [[raai|rogge]], zoas de spekdik. 
 
 As 't deeg maokt is, drokt ze een klein bollegien in een [[kniepiezer]] en legt der stukkies [[Drèentse kosterworst]] in. Daornao giet 't iezer dicht en dat laot ze ungeveer 10 seconden zo staon. Dan even ofkoelen en de neijaorskoek is klaor.
 
