/* Jeugd en opleiding */

--- a/Bolko_Bullerdiek.mw
+++ b/Bolko_Bullerdiek.mw
@@ -1,7 +1,7 @@
 '''Bolko Bullerdiek''' ([[Mbozi]], [[Tanzania]], 9 jannewaori 1939) is een [[Platduuts|Platduutse]] schriever.
 
 ==Jeugd en opleiding==
-Bullerdiek is in 1939 geboren op een [[zendeling|zendingspost]] in Tanzania. Det was doedertied een [[Verienigd Keuninkriek|Britse]] kolonie waor nog veul [[Duutslaand|Duutsers]] woonden uut de tied det de kolonie diel uutmaakte van [[Duuts-Oost-Afrika]]. In de [[Tweede Wereldoorlog]] wördden de va van Bullerdiek deur de Britten interneerd; later wördden de femilie uut Tanzania verdreven en mussen ze naor Duutslaand. Zien va gunk vervolgens bij de [[Wehrmacht]] en sneuvelde in Noord-Afrika.
+Bullerdiek is in 1939 geboren op een [[zendeling|zendingspost]] in Tanzania. Det was doedertied een [[Verienigd Keuninkriek|Britse]] kolonie waor nog veul [[Duutslaand|Duutsers]] woonden uut de tied det de kolonie diel uutmaakte van [[Duuts-Oost-Afrika]]. In de [[Tweede Wereldoorlog]] wördden de va van Bullerdiek deur de Britten interneerd; later wördden de femilie uut Tanzania verdreven en mussen ze naor Duutslaand uutwieken. Zien va gunk vervolgens bij de [[Wehrmacht]] en sneuvelde in Noord-Afrika.
 
 Bullerdiek gruide op in [[Bookholtbarg]], tussen [[Oldenbörg]] en [[Bremen]]. Zien moeder onderhöld heurzölf en heur beide zeuns as [[neister]]. De Platduutse taal van zien moe kreeg Bullerdiek passief mit (''"Plattdüütsch is de Spraak von mien Mudder, man nich mien Mudderspraak"'').
 
