*Empty MediaWiki Message*

--- a/Bolko_Bullerdiek.mw
+++ b/Bolko_Bullerdiek.mw
@@ -7,10 +7,10 @@ Bullerdiek gruide op in [[Bookholtbarg]], tussen [[Oldenbörg]] en [[Bremen]]. Z
 
 Hij wördden in [[Demost]] opeleid as industrieel koopman, een vak det hij knap vervelend vund. In [[Hambörg]] studeerde hij veur schoelmeister. Hij bleef in dizze stad, waor hij kwaamp te warken as onderwiezer en een betrekking kreeg an de onderwiezersopleiding, 't Landesinstitut für Lehrerbildung und Schulentwicklung. Hij hef schoelboeken eschreven veur onderricht in de [[Duuts|Duutse taal]].
 
-Bullerdiek verdielt zien tied tussen Hambörg en 't [[Sleeswiek-Holsteen|Sleeswiek-Holstiense]] [[Gunneby]].
+Bullerdiek verdielt zien tied tussen Hambörg en 't [[Sleeswiek-Holstain|Sleeswiek-Holstiense]] [[Gunneby]].
 
 ==Platduuts wark==
-Bullerdiek hef verscheiden Platduutse verhalenbundels op zien name. Ok drag e bij an publicaties veur 't onderwiezen van de [[Nedersaksische literatuur|Platduutse schrieverije]], zoas de bloemlezing ''Schrievwark'' (2004) veur de Hambörger schoeljeugd. Hij is betrökken bij de veriening veur Platduutse taal en literatuur [[Quickborn]]. Wieder schref e [[nöalstukken|columns]] veur dagbladen.
+Bullerdiek hef verscheiden Platduutse verhalenbundels op zien name. Ok drag e bij an publicaties veur 't onderwiezen van de [[Nedersaksische literetuur|Platduutse schrieverije]], zoas de bloemlezing ''Schrievwark'' (2004) veur de Hambörger schoeljeugd. Hij is betrökken bij de veriening veur Platduutse taal en literatuur [[Quickborn]]. Wieder schref e [[nöalstukken|columns]] veur dagbladen.
 
 Veur zien inzet veur de Platduutse taal en literatuur hef Bullerdiek verscheiden priezen ontvangen. In 1993 kreeg e de [[Freudenthal-Pries]], ien van de bekendste Nedersaksische literatuurpriezen; twee jaor later kreeg e de [[Fritz-Reuter-Pries]]. Meermaols zat e bij de winnaars van de Vertell-doch-mal-wedstried van de omroep [[Norddeutscher Rundfunk|NDR]]. In 2016 kreeg e de [[Borsla-Pries]] en in 2018 de Platduutse literatuurpries van de stad [[Kappeln]].
 
@@ -32,7 +32,7 @@ Veur zien inzet veur de Platduutse taal en literatuur hef Bullerdiek verscheiden
 * ''Bullerdiek sien Buddelbreven: Vertellen un Gedichten'' (Quickborn-Verlag, 2018)
 
 ==Bronnen==
-* [https://www.quickborn-vereinigung.de/person/bolko-bullerdiek/ Stokkien aover Bolko Bullerdiek op de webstee van Quickborn]
+* [https://www.quickborn-vereinigung.de/person/bolko-bullerdiek/ Stokkien aover Bolko Bullerdiek op de webstee van Platduutse veriening Quickborn]
 * [https://literaturhaus-sh.de/autoren/100.html Literaturhaus SH aover Bolko Bullerdiek]
 
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Drèents]].}}
