([[c:GR|GR]])  [[File:Flag of Peize.jpg]] → [[File:Peize vlag.svg]]

--- a/Paais.mw
+++ b/Paais.mw
@@ -1,4 +1,4 @@
-[[bestaand:Flag of Peize.jpg|thumb|vlagge]]
+[[bestaand:Peize vlag.svg|thumb|vlagge]]
 [[bestaand:Peizerwolde.jpg|thumb|[[Peizerwold]] (2006)]]
 '''Paais''' ([[Nederlaans]]: ''Peize'') is een [[Nederland]]s dörp in het noorden van de provincie [[Drenthe]], ongeveer tien kilometer ten zuden van de stad [[Grunnen (stad)|Grunnen]].
 
