--- a/Bolko_Bullerdiek.mw
+++ b/Bolko_Bullerdiek.mw
@@ -30,8 +30,8 @@ In 2016 kreeg e de [[Borsla-Pries]]<ref>Volker Holm: [http://kulturportal-herzog
 * ''Buten is dat koolt. Geschichten ton Opwarmen'' (Quickborn-Verlag, Hambörg 2006)
 * ''Dat Verspreken'' (Plaggenhauer, 2007)
 * ''Vör dien egen Döör'' (Quickborn-Verlag, 2009)
-* ''Fundsoken. Geschichten von güstern un vondoog'' (Quickborn-Verlag, 2014)
-* ''Bullerdiek sien Buddelbreven: Vertellen un Gedichten'' (Quickborn-Verlag, 2018)
+* ''Fundsoken. Geschichten von güstern un vondoog'' (Quickborn-Verlag, Hambörg, 2014)
+* ''Bullerdiek sien Buddelbreven: Vertellen un Gedichten'' (Quickborn-Verlag, Hambörg, 2018)
 
 ==Bronnen==
 * [https://www.quickborn-vereinigung.de/person/bolko-bullerdiek/ Stokkien aover Bolko Bullerdiek op de webstee van Platduutse veriening Quickborn]
