--- a/Hendrik_van_Dijk.mw
+++ b/Hendrik_van_Dijk.mw
@@ -7,17 +7,29 @@ In IJmuiden begunden Van Dijk oaver Drenthe te schrieven uut winst naor zien [[p
 In 1945 verscheen de bundel ''Op Strooienberg, ja, op Strooienberg'', mit gedichten en ien verhaal. In 1951 kwaamp ''Het gezin van Roelof en Annechien'' uut, det ok eerst as kraantenfulleton ofedrokt was.
 
 ==Anhaling==
-:''Bij Luuks Hilbers jonges haren ze het wark daon.
-:''Daon, nou ja daon, is maar bij wieze van spreken, want zo as een iedereniene wel wet is het bij een boer eigenlijk nooit van rechten daon, maar dan toch was 't wark wat an de kaante en zatten ze röstig mit menaar in de grote keuken.
-:''Fömmechien, de vrouwe, was an het wolle kaorden um dommiest an het spinnen te gaon, Hillechien, de maagd, zat te kousen stoppen achter an de taofel, die midden op de heerd stund, Jan Hilbers, de baos, en zien ongetrouwde breur Freins, de oldste jonge Garriet en het oldste maagien Jantien zatten rondumme het vuur, allemaole mit de bienen op de plate. [...]
-:''De peerde leken wel wat onröstig te wezen, drongden en schoerden tegen het schot an, trökken de ketten op en dale en opiens heurden ie een piepend, rerend geluud.
-:'' 'Heur die peerde toch ies!' zee Jan Hilbers. 'Hej ze nog wat zoepen toe ehölden, Freins?'
-:'' 'Ja, zee Freins, 'en ook nog een toppien heui in de repe gooid. Ze hebt narrengs gebrek an, maar die jonge roene is een lillijke bieterd, het is net of e d'olde Bles altied op de kop mut zitten.'
-:'' 'Ie hebt geliek Freins, bevestigde Jan Hilbers. 'Heur nou toch ies an zo'n getrap en geraom. Wat tragaait e hum weer die vechtersbaos.'
-:'' 'Ien, ie, ie, ien!', klunk het iniens baoven alles uut.
-:'' 'Wacht maar even, lillijke smeerlappe! ik zal oe het neijaor ofwinnen!' zee Jan Hilbers, die onderwiel de klompen anscheut en de lanteern opstak.
-:''Even later stund hij bij de peerdestal. De roene stund mit zien oren plat in de nakke en zien gat achteruut klaor um weer een raom te doen en de Bles te bieten.
-:''Vlukend en schrouwend greep Jan Hilbers de [[Riesebessem|riezebessem]], die bij het hoekien van de peerdestal stund en gaf de roen met het onderende van de bessemstok zo'n paar geduchte klappen op zien pèense, dat e mit een raom achteruut heuk en stund te trillen op zien poten.''
+<blockquote style="font-style:italic">
+Bij Luuks Hilbers jonges haren ze het wark daon.
+
+Daon, nou ja daon, is maar bij wieze van spreken, want zo as een iedereniene wel wet is het bij een boer eigenlijk nooit van rechten daon, maar dan toch was 't wark wat an de kaante en zatten ze röstig mit menaar in de grote keuken.
+
+Fömmechien, de vrouwe, was an het wolle kaorden um dommiest an het spinnen te gaon, Hillechien, de maagd, zat te kousen stoppen achter an de taofel, die midden op de heerd stund, Jan Hilbers, de baos, en zien ongetrouwde breur Freins, de oldste jonge Garriet en het oldste maagien Jantien zatten rondumme het vuur, allemaole mit de bienen op de plate. [...]
+
+De peerde leken wel wat onröstig te wezen, drongden en schoerden tegen het schot an, trökken de ketten op en dale en opiens heurden ie een piepend, rerend geluud.
+
+'Heur die peerde toch ies!' zee Jan Hilbers. 'Hej ze nog wat zoepen toe ehölden, Freins?'
+
+'Ja, zee Freins, 'en ook nog een toppien heui in de repe gooid. Ze hebt narrengs gebrek an, maar die jonge roene is een lillijke bieterd, het is net of e d'olde Bles altied op de kop mut zitten.'
+
+'Ie hebt geliek Freins, bevestigde Jan Hilbers. 'Heur nou toch ies an zo'n getrap en geraom. Wat tragaait e hum weer die vechtersbaos.'
+
+'Ien, ie, ie, ien!', klunk het iniens baoven alles uut.
+
+'Wacht maar even, lillijke smeerlappe! ik zal oe het neijaor ofwinnen!' zee Jan Hilbers, die onderwiel de klompen anscheut en de lanteern opstak.
+
+Even later stund hij bij de peerdestal. De roene stund mit zien oren plat in de nakke en zien gat achteruut klaor um weer een raom te doen en de Bles te bieten.
+
+Vlukend en schrouwend greep Jan Hilbers de [[Riesebessem|riezebessem]], die bij het hoekien van de peerdestal stund en gaf de roen met het onderende van de bessemstok zo'n paar geduchte klappen op zien pèense, dat e mit een raom achteruut heuk en stund te trillen op zien poten.''
+</blockquote>
 
 Begun van: ''Luuks Hilbers jonges''
 
