--- a/Hendrik_van_Dijk.mw
+++ b/Hendrik_van_Dijk.mw
@@ -28,7 +28,7 @@ De peerde leken wel wat onröstig te wezen, drongden en schoerden tegen het scho
 
 Even later stund hij bij de peerdestal. De roene stund mit zien oren plat in de nakke en zien gat achteruut klaor um weer een raom te doen en de Bles te bieten.
 
-Vlukend en schrouwend greep Jan Hilbers de [[Riesebessem|riezebessem]], die bij het hoekien van de peerdestal stund en gaf de roen met het onderende van de bessemstok zo'n paar geduchte klappen op zien pèense, dat e mit een raom achteruut heuk en stund te trillen op zien poten.''
+Vlukend en schrouwend greep Jan Hilbers de [[Riesebessem|riezebessem]], die bij het hoekien van de peerdestal stund en gaf de roen met het onderende van de bessemstok zo'n paar geduchte klappen op zien pèense, dat e mit een raom achteruut heuk en stund te trillen op zien poten.
 </blockquote>
 
 Begun van: ''Luuks Hilbers jonges''
