--- a/Verköldheid.mw
+++ b/Verköldheid.mw
@@ -10,7 +10,7 @@ n Naam löt deankn at verkeuldheaid van keulte keump,<ref>[http://news.bbc.co.uk
 
 Ondaanks at medisienfabrikaantn<ref>[http://aac.asm.org/cgi/content/full/43/9/2109 Activity of Pleconaril against Enteroviruses - Pevear et al. 43 (9): 2109 - Antimicrobial Agents and Chemotherapy]</ref><ref>[http://www.ncbi.nlm.nih.gov/pubmed/3440773 Prophylaxis and treatment of rhinovirus colds with...[J Antimicrob Chemother. 1987&#93; - PubMed Result]</ref><ref>[http://www.ncbi.nlm.nih.gov/pubmed/2438740 Interferons and their clinical value. [Rev Infect Dis. 1987 Mar-Apr&#93; - PubMed Result]</ref> en [[alternatieve geneaswieze]]n<ref>[http://www.ncbi.nlm.nih.gov/pubmed/11697022 Preventing the common cold with a garlic supplemen...[Adv Ther. 2001 Jul-Aug&#93; - PubMed Result]</ref><ref>[http://www.ncbi.nlm.nih.gov/pubmed/11035691 Chicken soup inhibits neutrophil chemotaxis in vit...[Chest. 2000&#93; - PubMed Result]</ref> aanders beweart, hef geneaskeundig oonderzeuk nooit oet eweezn<ref>[http://www.lungusa.org/site/pp.asp?c=dvLUK9O0E&b=35873#done Cold and Flu Guidelines: The Common Cold - American Lung Association site]</ref><ref>http://www.pubmedcentral.nih.gov/articlerender.fcgi?tool=pmcentrez&artid=1472796</ref> at verkeuldheaid duur [[geneasmiddel]]n kan vuurkomn wordn of teegn egoan. De klachtn köant dr wal met teegn wordn egoan, mer t is nit zeker of de verkeuldheaid dr körter van doert.  
 
-Aander oonderzeuk wis oet at verkeuldheaid wellicht saamngeet met dikheaid. De stoatistiekn wordt nog wier beïnvloodt duurdet dikke leu duur mekoar enömn vakerder noar n [[dokter]] goat vuur kleaine klachtn. Ook hebt dikkere leu duur mekoar meender wierstaand as leu van "normale" zwöarte.<ref>''[http://www.goedgevoel.be/gg/nl/139/Obesitas/article/detail/612683/2009/01/14/Dikke-mensen-hebben-vaker-verkoudheid.dhtml Goedgevoel.be: Dikke mensen hebben vaker verkoudheid]</ref>
+Aander oonderzeuk wis oet at verkeuldheaid wellicht saamngeet met dikheaid. De stoatistiekn wordt nog wier beïnvloodt duurdet dikke leu duur mekoar enömn vakerder noar n [[dokter]] goat vuur kleaine klachtn. Ook hebt dikkere leu duur mekoar meender wierstaand as leu van "normale" zwöarte.<ref>''[http://www.goedgevoel.be/gg/nl/139/Obesitas/article/detail/612683/2009/01/14/Dikke-mensen-hebben-vaker-verkoudheid.dhtml Goedgevoel.be: Dikke mensen hebben vaker verkoudheid]''</ref>
 
 {{Bron|<references/>}}
 
