--- a/Brogge_(bouwwark).mw
+++ b/Brogge_(bouwwark).mw
@@ -31,7 +31,7 @@ Mit de koms van de [[industriële revelusie]] verschenen in de [[19e eeuw]] [[sm
 ** ''batting'' ([[Vjens]])***
 * [[Veluws]]: ''brog{{small()|ge}}'', ''brug{{small()|ge}}''
 
-<nowiki>*</nowiki>Zoas ''Staintil'' over Auwerderdaip, n 17e-aivse boogbrogge mit keermuren van bakstain en zaandstain. De ploatsnoam ''Doodstil'' mout man den ook begriepen as ''doods-til'' en nait as doodse stilte''.
+<nowiki>*</nowiki>Zoas ''Staintil'' over Auwerderdaip, n 17e-aivse boogbrogge mit keermuren van bakstain en zaandstain. De ploatsnoam ''Doodstil'' mout man den ook begriepen as ''doods-til'' en nait as ''doodse stilte''.
 
 <nowiki>**</nowiki>'In woorden als ''bod'' 'bord', ''batte'' 'bart, houten bruggetje', ''koste'' 'korst', dat wil zeggen na korte klinkers, treden een ''t'', ''d'', ''s'' en ''z'' op die worden gearticuleerd met een licht terugkrullende tongpunt, een overblijfsel van een ''r'' in een oudere taalfase.' Uut Henk Bloemhoff (2008), 'Stellingwerf', in Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum, blz. 183
 
