([[c:GR|GR]])  [[File:Vlagtwedde vlag.png]] → [[File:Vlagtwedde vlag.svg]]

--- a/Vlagtwedde_(gemainte).mw
+++ b/Vlagtwedde_(gemainte).mw
@@ -1,6 +1,6 @@
 {{Gemeynde
 | name = Vlagtwedde
-| bestandsname vlagge = Vlagtwedde vlag.png
+| bestandsname vlagge = Vlagtwedde vlag.svg
 | bestandsname wåpen = Vlagtwedde wapen.svg
 | lokaty = LocatieVlagtwedde
 | provincy = [[Grunnen (provìnzie)|Grunnen]]
