--- a/Noord-Germaanse_taelen.mw
+++ b/Noord-Germaanse_taelen.mw
@@ -73,13 +73,13 @@ De belangriekste ofwieking van de gebrukelike Standerdnederlaandse woordvolgorde
 Kenmarkend veur de Noord-Germaanse taelen is dat t [[lidwoord|bepaold lidwoord]] him as n [[suffix]] gedreegt deurdat t an t zelsstaandige naemwoord "vaasteplakt" wordt; dit hiet ''anhecht lidwoord'' (t zelde gebeurt bi'jgelieks in t [[Arabies]]). t Ieslaands het as ienigste van de vief Noord-Germaanse taelen gien [[lidwoord|onbepaold lidwoord]]. n Veurbield:
 
 {|
-| '''Nedersasksies'''
-| '''Ieslaands'''
-| '''Faeröers'''
-| '''Ni'jnoors'''
-| '''Bokmål'''
-| '''Deens'''
-| '''Zweeds'''
+! Nedersasksies
+! Ieslaands
+! Faeröers
+! Ni'jnoors
+! Bokmål
+! Deens
+! Zweeds
 |-
 |n jonge
 |strákur
@@ -166,17 +166,17 @@ De ''-s-''vörm wordt as stielvoller en/of as formeler zien.
 
 De'' -s-''vörm in de verleden tied wordt in t Zweeds ok vaeke veur zaeken bruukt waor ze in t Nederlaands ''is ge-'' (of partie Nedersaksiese dialekten as ''-is e'') veur bruken zollen:
 
-:Dit boek is skreven deur -- ''Den här boken skrevs av ...'' (let.: Dit hier boek wordde skreven deur...'')
+:Dit boek is skreven deur -- ''Den här boken skrevs av ...'' (let.: Dit hier boek wordde skreven deur...)
 
 ==== Partikels ====
 [[Warkwoord]]en kunnen uut twie dielen bestaon, waorbi'j t twiede diel, t ''partikel'' n [[bi'jwoord]] of [[veurzetsel]] is dat t warkwoord n aandere betekenis geft. t Partikel kan bi'j warkwoordvörms van plak veraanderen. Bi'jgelieks:
 
 {|
-| '''Nedersaksies'''
-| '''Zweeds'''
-| '''Bokmål'''
-| '''Ni'jnoors'''
-| '''Deens'''
+! Nedersaksies
+! Zweeds
+! Bokmål
+! Ni'jnoors
+! Deens
 |-
 | anzetten
 | sätta på
