--- a/Nedersaksische_literetuur_töt_1900.mw
+++ b/Nedersaksische_literetuur_töt_1900.mw
@@ -1,5 +1,5 @@
 {{etalage}}
-{{Zie dv|'''Dit artikel gef een aoverzicht van de Nedersaksische literatuur töt 1900. Zie ok de artikels [[Nedersaksische literatuur in de 20e ieuw]] en [[Nedersaksische literatuur in de 21e ieuw]].}}
+{{Zie dv|Dit artikel gef een aoverzicht van de Nedersaksische literatuur töt 1900. Zie ok de artikels [[Nedersaksische literatuur in de 20e ieuw]] en [[Nedersaksische literatuur in de 21e ieuw]].}}
 [[Ofbeelding:Steenbergen.jpg|thumb|right|150px|Albert Steenbergen (1814-1900) schreef opmarkelijke vertellegies en gedichten in 't Drèents]]
 '''Nedersaksische literetuur''' beslat de [[literetuur|literaire]] schrieveri'je in de verschillende dialecten van 't [[Nedersaksisch]]. Allewal de naodrok in dit artikel lig op 't Nedersaksisch van Nederlaand, wördt ok partie ontwikkelings in de [[Platduutse literetuur]] beschreven. Tussen de Nedersaksische en de Platduutse literetuur is d'r jao een taalkundige, mar ok een culturele samenhang.
 
@@ -155,31 +155,35 @@ Een antal schrievers levert incidenteel wark of in de volkstaal. In 1816 schrif 
 
 [[Anthony Christiaan Winand Staring|A.C.W. Staring]] (1767-1840) kump in det jaor of later mit ''De Tuchtiging der Algerijnen, 27 Aug. 1816'', eschreven in 't [[Achterhoeks]] van [[Zutphen]]. Een fragment daoruut:
 
-:''Die Algierse venters
-:''Had sestig.... ('k leuf meer!) kristemensen an flenters
-:''Gehakt, ŭŭt baren meudwil; ook gink
-:''Eur olde staelen weer an; ze gaf un gèèn dink!
-:''En onzen Könnink dorst ze òòk an te blekken!
-:''Den was dat, köi denken, in den krop bliven stekken.
-:''Ook duurde 't niet lange, of dāār hait! de Ammerāāl
-:''Van de Capellen mos tot um. 'Miinhaer de Ammerāāl,'
-:''Zei de Könnink 'ik moet oe es vrāgen:
-:''Zol dat Dievengespŭŭs van Algiers os plāgen,
-:''Noe het Franse, met Gods hulpe, klein is emaakt?
-:''Dan waar 't Land ŭŭt den raegen in den drup eraakt!’
-:'' 'Reg zo, Oe Hoogheid!' zei de Ammerāāl, 'en geen viven
-:''En zessen meer mèt eur! - 't help ze maar stiven
-:''In eur kwāā nukken; dāārum - kort en goed:
-:''Schaf I kogels, WI - schiet ze eur rààk op de hoet.'
+<poem style="margin-left:1.5em; font-style:italic">
+Die Algierse venters
+Had sestig.... ('k leuf meer!) kristemensen an flenters
+Gehakt, ŭŭt baren meudwil; ook gink
+Eur olde staelen weer an; ze gaf un gèèn dink!
+En onzen Könnink dorst ze òòk an te blekken!
+Den was dat, köi denken, in den krop bliven stekken.
+Ook duurde 't niet lange, of dāār hait! de Ammerāāl
+Van de Capellen mos tot um. 'Miinhaer de Ammerāāl,'
+Zei de Könnink 'ik moet oe es vrāgen:
+Zol dat Dievengespŭŭs van Algiers os plāgen,
+Noe het Franse, met Gods hulpe, klein is emaakt?
+Dan waar 't Land ŭŭt den raegen in den drup eraakt!’
+'Reg zo, Oe Hoogheid!' zei de Ammerāāl, 'en geen viven
+En zessen meer mèt eur! - 't help ze maar stiven
+In eur kwāā nukken; dāārum - kort en goed:
+Schaf I kogels, WI - schiet ze eur rààk op de hoet.'
+</poem>
 
 De textielondernemer [[Benjamin Blijdenstein]] (1780-1857) is mit 't ''Twenther Brulf'teleed'' van 156 varsregels (1836) de eerste die wat in 't [[Tweants|Twèents]] dicht. Een fragment:
 
-:''Nen Griikschen glans op Twentsch gedicht
-:''Zol glynstren oaverbeudig,
-:''As op nen pyrok slecht en slicht,
-:''Grofneudig en spierdreudig,
-:''Een gould' of zulv'ren passement:
-:''Wy kallet as we et bynt 'ewent.
+<poem style="margin-left:1.5em; font-style:italic">
+Nen Griikschen glans op Twentsch gedicht
+Zol glynstren oaverbeudig,
+As op nen pyrok slecht en slicht,
+Grofneudig en spierdreudig,
+Een gould' of zulv'ren passement:
+Wy kallet as we et bynt 'ewent.
+</poem>
 
 Aandere schrievers pakt vrog uut mit volledige bundels in de streektaal, zoas [[Wilhelm Bornemann]] (1766-1851) mit ''Plattdeutsche Gedichte'' (1810, viefde drok in 1843) en die zien naovolger [[Friedrich Wilhelm Albrecht]] mit ''Plattdeutsche Gedichte von einem altmärkischen Landmann'' (1817). [[Georg Nicolaus Bärmann|Georg Nicolaus (Jürgen Niklaas) Bärmann]] kump mit ''En Höög- un Häwel-Book för'n plattdüütschen Börger un'n Buren'' (1822), evolgd deur ''Dat grote Höög- un Häwel-Book: Dat sünd Dichtels, Rymels un Burenspillen in hamborger plattdüüdscher Mundart'' (1827).
 
