--- a/De_Vaort_(plaatse).mw
+++ b/De_Vaort_(plaatse).mw
@@ -15,17 +15,19 @@ In dizze lieste vien ie bekend volk van De Vaort.
 * [[Mien Ruys]] (1904-1999), internationaol bekende tuunarchitecte
 
 == De Vaort bezungen ==
-:'' 't Is stil an de bruggen en sluzen<br />
-:''en de damp steg op uut 't kanaal.<br />
-:''An De Vaort hej de winkels en huzen,<br />
-:''een klein postkantoor, 't olde gemaal.<br />
+<poem style="margin-left:1.5em; font-style:italic">
+'t Is stil an de bruggen en sluzen
+en de damp steg op uut 't kanaal.
+An De Vaort hej de winkels en huzen,
+een klein postkantoor, 't olde gemaal.
 
-:''[...]
+[...]
 
-:''Waor gras was, is asfalt ebouwd<br />
-:''want 't mos nog veul better gaon lieken.<br />
-:''Waor 't geluk met beton wordt verbouwd<br />
-:''en dan muj noe es kieken.<br />
+Waor gras was, is asfalt ebouwd
+want 't mos nog veul better gaon lieken.
+Waor 't geluk met beton wordt verbouwd
+en dan muj noe es kieken.
+</poem>
 
 :Uut [http://www.ijsselacademie.nl/ija/taal/luuster.asp ''Stil an De Vaort''] deur [[Harm Jan Hilbrink]]
 
