--- a/Eeknprosessieroepe.mw
+++ b/Eeknprosessieroepe.mw
@@ -47,7 +47,7 @@ As natuurlike bestrieding zol de grote popnreuwer wier in ezat könn wordn. Det 
 
 ==Neersassies==
 *'''Algemeen''': 
-**''eikenprocessierups
+**''eikenprocessierups''
 *[[Tweants]]:
 **''eeknprosessieroepe'' -''rupse''
 **<small>Informeel:</small> ''stekkelroepe''
