--- a/Paus_Caelestinus_V.mw
+++ b/Paus_Caelestinus_V.mw
@@ -1,4 +1,4 @@
-[[File:Opuscula omnia.tif|thumb|''Opuscula omnia'', 1640]]
+[[File:Caelestinus V - Opuscula omnia, 1640 - BEIC 9744840.tiff|thumb|''Opuscula omnia'', 1640]]
 '''Paus Caelestinus V''' ok wel '''Coelestinus''' enuumd (echte name: ''Pietro del Murrone'', ''Petrus de Murrone'' of ''Pietro Angelari'') was 'ne [[Paus]] van de [[Rooms-Katholieke Karke|Rooms-Kattelieke Karke]] van [[juli]] tot [[december]] [[1294]].
 
 Zien veurnaamste daod was 't oetvaordigen van 'n decreet dät pausen toeston of te trejen. Hee maakte hier vervolgens zölf op [[13 december]] van dätzölfde jaor gebroek van. Zien opvolger [[Paus Bonifatius VIII]] was hier niet gelokkig mit en leut hum gevangen nimmen.
