*Empty MediaWiki Message*

--- a/Bruunsbarg_(Polen).mw
+++ b/Bruunsbarg_(Polen).mw
@@ -1,16 +1,16 @@
-[[Bestaand:Braniewo_-_bazylika_2.jpg|thumb|Sinte-Katarinabasilik in Brunsbarg]]
-[[Bestaand:Braniewo_Kościuszki_108-007.JPG|thumb|En olde [[spyker]] in Brunsbarg]]
-'''Brunsbarg''' ([[Pools|poolsk]]: ''Braniewo'', [[Duuts|düütsk]]: ''Braunsberg'') is en [[stad]] in et [[Polen|poolske]] [[woiwodskap]] [[Armland-Mazurie]], in et gelyknamige distrikt. Vrogger behöyrde de stad tot de [[Prusen|prüüssiske]] provinsy [[Oustprüüssen]], et meyst oustelike deyl van [[Duutslaand|Düütskland]] vöär de grensveranderingen nå de [[Twiede Wereldoorlog|Tweyde Wearldoorlog]].
+[[Bestaand:Braniewo_-_bazylika_2.jpg|thumb|Sinte-Katarinabasilik in Bruunsbarg]]
+[[Bestaand:Braniewo_Kościuszki_108-007.JPG|thumb|En olde [[spyker]] in Bruunsbarg]]
+'''Bruunsbarg''' ([[Pools|poolsk]]: ''Braniewo'', [[Duuts|düütsk]]: ''Braunsberg'') is en [[stad]] in et [[Polen|poolske]] [[woiwodskap]] [[Armland-Mazurie]], in et gelyknamige distrikt. Vrogger behöyrde de stad tot de [[Prusen|prüüssiske]] provinsy [[Oustprüüssen]], et meyst oustelike deyl van [[Duutslaand|Düütskland]] vöär de grensveranderingen nå de [[Twiede Wereldoorlog|Tweyde Wearldoorlog]].
 
-Brunsbarg is teagenswoordig de up eyn nå groutste stad van [[Armland]], allinig [[Allensteyn]] (''Olsztyn'') is grouter. Et is ouk en belangryk historisk centrum in de regio. Brunsbarg ligt an de de rivyr de [[Passarge|Passarge/Pasłęka]], sou'n 5 km van de [[Wysselhav]], 35 km ten noordousten van [[Elbing]] (''Elbląg'') en 55 km ten süüdousten van [[Koaningsbargen]] (''Kaliningrad''). De poolske grens mid et [[Ruslaand|russiske]] oblast Koaningsbargen ligt 6 km ten noorden, en kan vanüüt Brunsbarg bereiked wörden via de provinsiale weg (''Droga Krajowa'') 54.
+Bruunsbarg is teagenswoordig de up eyn nå groutste stad van [[Armland]], allinig [[Allensteyn]] (''Olsztyn'') is grouter. Et is ouk en belangryk historisk centrum in de regio. Bruunsbarg ligt an de de rivyr de [[Passarge|Passarge/Pasłęka]], sou'n 5 km van de [[Wysselhav]], 35 km ten noordousten van [[Elbing]] (''Elbląg'') en 55 km ten süüdousten van [[Koaningsbargen]] (''Kaliningrad''). De poolske grens mid et [[Ruslaand|russiske]] oblast Koaningsbargen ligt 6 km ten noorden, en kan vanüüt Bruunsbarg bereiked wörden via de provinsiale weg (''Droga Krajowa'') 54.
 
 ==Geskydenisse==
-De oldste name van de stad – Brunsberg - möägelik vernöömd nå bisskop [[Bruno van Skouwenbörg]], mar kan ouk good en verforming weasen van et [[prüüsisk|prüüsiske]] ''Brusebergue'', dat 'leagerkamp van de prüüssen' solde beteykenen. De gelyknamige plaatse [[Brunsbarg (Tsjechie)|Brunsbarg]] (''Brušperk'') in [[Bohemen]], dee rund deselvde tyd estichted wördden, is ouk vernöömd nå [[Bruno van Skouwenbörg]]. 
+De oldste name van de stad – Brunsberg - möägelik vernöömd nå bisskop [[Bruno van Skouwenbörg]], mar kan ouk good en verforming weasen van et [[prüüsisk|prüüsiske]] ''Brusebergue'', dat 'leagerkamp van de prüüssen' solde beteykenen. De gelyknamige plaatse [[Bruunsbarg (Tsjechie)|Bruunsbarg]] (''Brušperk'') in [[Bohemen]], dee rund deselvde tyd estichted wördden, is ouk vernöömd nå [[Bruno van Skouwenbörg]]. 
 
-As belangrykste handels- en havenstad van Armland wördden Brunsbarg in [[1358]] lid van de [[Hanze|Hanse]] en bleav dat tot [[1608]].
+As belangrykste handels- en havenstad van Armland wördden Bruunsbarg in [[1358]] lid van de [[Hanze|Hanse]] en bleav dat tot [[1608]].
 
 ==Üütgånde verwysing==
-{{Commonscat|Braniewo|Brunsbarg}}
+{{Commonscat|Braniewo|Bruunsbarg}}
 
 {{Dialekt|wvel||Nysassiske Skryvwyse}}
 
