*Empty MediaWiki Message*

--- a/Bruunsbarg.mw
+++ b/Bruunsbarg.mw
@@ -1,5 +1,5 @@
-'''Brunsbarg''' kan verwysen nå:
-*[[Brunsbarg (Polen)]] - stad in Polen (poolsk: ''Braniewo'')
-*[[Brunsbarg (Tsjechie)]] - stad in Tsjechie (tsjechisk: ''Brušperk'')
+'''Bruunsbarg''' kan verwysen nå:
+*[[Bruunsbarg (Polen)]] - stad in Polen (poolsk: ''Braniewo'')
+*[[Bruunsbarg (Tsjechie)]] - stad in Tsjechie (tsjechisk: ''Brušperk'')
 
 {{dv}}
