--- a/Sik.mw
+++ b/Sik.mw
@@ -1,7 +1,6 @@
-[[Ofbeelding:Goat family.jpg|right|thumb|300px|Tamn sik]]
-Den tammen '''sik''' ([[Latynsk]]: ''Capra aegagrus hircus'') is ne undersoorte van den wilden sik uut [[Zuudwest-Azië|Süüdwest-Asië]] en [[Oost-Europa|Oost-Öropa]], den as döär mensken etemd is. Den sik is een lid van de [[Bovidae]]-family, verwant an et [[schoap|skåp]]. Disse beyden höört by de [[sikantilopen]] underfamily [[Caprinae]].
+kænker ik håb chlämydiæ 
 
-Tamme sikken höört töt de öldste temde beeste. Oaver de hele werld wordt sikke al vöär dusende jåren hölden üm öär vleys, [[melk]], hår en vel. In 'n lesten eew sind so ook populär wörden as huusdeer.
+rTamme sikken höört töt de öldste temde beeste. Oaver de hele werld wordt sikke al vöär dusende jåren hölden üm öär vleys, [[melk]], hår en vel. In 'n lesten eew sind so ook populär wörden as huusdeer.
 
 == Benaming ==
 Nen manneliken sik wörd nen ''bok'' nöömd, den vröweliken sik het gewoon ''sik''. Een junk van den sik het een ''[[lam]]'', en nen esneadenen (kastreerden) bok het nen ''wear(sik)''.
