*Empty MediaWiki Message*

--- a/Forum_voor_Democratie.mw
+++ b/Forum_voor_Democratie.mw
@@ -1,7 +1,7 @@
 [[ofbeelding:FvD_Logo.png|thumb|300px|300px|Et logo van Forum voor Democratie]]
-'''Forum voor Democratie''' (ok wel '''FVD''') is een [[Nederland|Nederlaandse]] [[Politiek|politieke]] [[Politieke parti'j|parti'je]] die zikzölf [[liberaal-conservatief]] nuumt<ref>https://www.fvd.nl/zomermanifest</ref>. Deur anderen wördt de parti'je ook wel [[Nationalisme|nationalistisch]] of [[Rechts (politiek)|rechts]]-[[Populisme|populistisch]] enuumd<ref>https://www.volkskrant.nl/nieuws-achtergrond/weghonen-van-populistisch-rechts-is-geen-optie-meer~b372eafd/?referrer=https%3A%2F%2Fnl.wikipedia.org%2F</ref><ref>https://nos.nl/artikel/2277253-de-nieuwe-politieke-kaart-van-nederland-versnippering-in-beeld.html</ref><ref>https://www.trouw.nl/nieuws/zal-forum-voor-democratie-slagen-waar-de-pvv-dat-niet-deed~be8fca02/</ref>.
+'''Forum voor Democratie''' (ok wel '''FVD''') is een [[Nederland|Nederlaandse]] [[Politiek|politieke]] [[Politieke parti'j|parti'je]] die zikzölf [[liberaal-conservatief]] nuumt.<ref>https://www.fvd.nl/zomermanifest</ref> Deur anderen wördt de parti'je ook wel [[Nationalisme|nationalistisch]] of [[Rechts (politiek)|rechts]]-[[Populisme|populistisch]] enuumd.<ref>https://www.volkskrant.nl/nieuws-achtergrond/weghonen-van-populistisch-rechts-is-geen-optie-meer~b372eafd/?referrer=https%3A%2F%2Fnl.wikipedia.org%2F</ref><ref>https://nos.nl/artikel/2277253-de-nieuwe-politieke-kaart-van-nederland-versnippering-in-beeld.html</ref><ref>https://www.trouw.nl/nieuws/zal-forum-voor-democratie-slagen-waar-de-pvv-dat-niet-deed~be8fca02/</ref>
 
-De parti'je wier in [[2015]] op ericht as n [[denktank]] deur [[Thierry Baudet]] en [[Henk Otten]] en in [[2016]] wier et een politieke parti'je. Sunds de 23 [[meert]] [[2017]] ([[Twiede Kamerverkiezings 2017]]) hef Forum voor Democratie twie zetels in de [[Twiede Kamer der Staoten-Generaal|Twiede Kamer der Staoten-Generaal.]]
+De parti'je wier in [[2015]] op ericht as n [[denktank]] deur [[Thierry Baudet]] en [[Henk Otten]] en in [[2016]] wier et een politieke parti'je. Sunds de 23 [[meert]] [[2017]] ([[Twiede Kamerverkiezings 2017]]) hef Forum voor Democratie twie zetels in de [[Twiede Kamer der Staoten-Generaal|Twiede Kamer der Staoten-Generaal.]] Bi'j de [[Twiede Kamerverkiezings 2021]] hef de parti'je 8 zetels ehaald.
 ==Verwiezings==
 <references/>
 
