*Empty MediaWiki Message*

--- a/Silesauridae.mw
+++ b/Silesauridae.mw
@@ -1,9 +1,9 @@
 [[ofbeelding:Silesaurus1.jpg|right|300px|''Silesaurus'']]
 [[ofbeelding:Silesauridae.png|right|300px|Silesauridae]]
-'''Silesauridae''' is een uut estörven [[clade]] van [[Dinosauriformes]] uut het [[Trias]]. De clade bestaot uut dieren die het miest verwant bint an de [[dinosaurussen]]. Uut verstiend poep ([[coproliet]]) blik dät sommige dieren van disse clade veural insecten hebt egetten ([[insectivoor]]). ''[[Silesaurus]]'' is hier een veurbield van. Zie zollen veural op kleine [[Kever|kevers]] en andere [[geleedpotigen]] azen.<ref>Martin Qvarnström; Joel Vikberg Wernström; Rafał Piechowski; Mateusz Tałanda; Per E. Ahlberg; Grzegorz Niedźwiedzki (2019). "Beetle-bearing coprolites possibly reveal the diet of a Late Triassic dinosauriform". ''Royal Society Open Science''. '''6''' (3): Article ID 181042. doi:10.1098/rsos.181042. PMC 6458417. <nowiki>PMID 31031991</nowiki>.</ref>
+'''Silesauridae''' is een uut estörven [[clade]] van [[Dinosauriformes]] uut eet [[Trias]]. De clade bestiet uut dieren die het miest verwant bint an de [[dinosaurussen]]. Uut verstiend poep ([[coproliet]]) blik det sommige dieren van disse clade veural insecten egetten hebt ([[insectivoor]]). ''[[Silesaurus]]'' is hier een veurbield van. Zie zollen veural op kleine [[Kever|kevers]] en andere [[geleedpotigen]] azen.<ref>Martin Qvarnström; Joel Vikberg Wernström; Rafał Piechowski; Mateusz Tałanda; Per E. Ahlberg; Grzegorz Niedźwiedzki (2019). "Beetle-bearing coprolites possibly reveal the diet of a Late Triassic dinosauriform". ''Royal Society Open Science''. '''6''' (3): Article ID 181042. doi:10.1098/rsos.181042. PMC 6458417. <nowiki>PMID 31031991</nowiki>.</ref>
 
 == Classificaotie ==
-De Silesauridae is een [[zustergroep]] van de [[Dinosaurussen]]. De groep hef zien näme in 2010 ekregen van de [[paleontoloog]] Max C. Langer in een studie (Max C. Langer ''et al''). De Silesauridae bint een clade van de [[Archosauria]] die körter up ''[[Silesaurus]]'' zit dan up ''[[Heterodontosarus tucki]]'' of ''[[Marasuchus lilloensis]]''. Tegeliekertied as met de eerste groep nuumde een twiede groep van önderzukers (vrie van mekare) de ''Silesauridae'' as een clade die bestaot uut ''[[Lewisuchus]]'', ''[[Silesaurus]]'', al hun veurolders en hun naokommers.<ref name=":0">Nesbitt, Sterling J., Sidor, Christian A., Irmis, Randall B., Angielczyk, Kenneth D., Smith, Roger M.H. and Tsuji, Linda A. (2010) "Ecologically distinct dinosaurian sister group shows early diversification of Ornithodira." ''Nature'' 464(7285):95-8 Supplement</ref> Noe betekent beide hetzelfde, zie beslaot dezölfde groep dieren. In een lätere studie in [[2010]] van Sterling J. Nesbitt ''et al''. wier emient dät betekenis van Langer ''et al.'' niet genog was um de een [[Familie (biologie)|familie]]-näme t egeaven volgens de liende van het ICZN. Daorumme kump de näme van de clade Silesauridae van de studie Langer ''et al.'' (2010). De familie näme kump weg van de studie Nesbitt ''et al.'' (2010).<ref name=":1">Kammerer, C. F.; Nesbitt, S. J.; Shubin, N. H. (2012). "The First Silesaurid Dinosauriform from the Late Triassic of Morocco". ''Acta Palaeontologica Polonica''. '''57''' (2): 277. doi:10.4202/app.2011.0015.</ref>
+De Silesauridae is een [[zustergroep]] van de [[dinosaurussen]]. De groep hef zien näme in 2010 ekreagen van de [[paleontoloog]] Max C. Langer in een studie (Max C. Langer ''et al''). De Silesauridae bint een clade van de [[Archosauria]] die körter up ''[[Silesaurus]]'' zit dan up ''[[Heterodontosarus tucki]]'' of ''[[Marasuchus lilloensis]]''. Tegeliekertied as met de eerste groep nuumden een twiede groep van onderzukers (vri'j van mekare) de ''Silesauridae'' as een clade die bestiet uut ''[[Lewisuchus]]'', ''[[Silesaurus]]'', al hun veurolders en hun ofstammelings.<ref name=":0">Nesbitt, Sterling J., Sidor, Christian A., Irmis, Randall B., Angielczyk, Kenneth D., Smith, Roger M.H. and Tsuji, Linda A. (2010) "Ecologically distinct dinosaurian sister group shows early diversification of Ornithodira." ''Nature'' 464(7285):95-8 Supplement</ref> Noe betekent beide hetzelfde, zie beslaot dezölfde groep dieren. In een latere studie in [[2010]] van Sterling J. Nesbitt ''et al''. wier emient det betekenis van Langer ''et al.'' niet genog was um de ien een [[Familie (biologie)|familie]]-näme te geaven volgens de liende van het ICZN. Daorumme kump de näme van de clade Silesauridae van de studie Langer ''et al.'' (2010). De familie näme kump weg van de studie Nesbitt ''et al.'' (2010).<ref name=":1">Kammerer, C. F.; Nesbitt, S. J.; Shubin, N. H. (2012). "The First Silesaurid Dinosauriform from the Late Triassic of Morocco". ''Acta Palaeontologica Polonica''. '''57''' (2): 277. doi:10.4202/app.2011.0015.</ref>
 
 
 De evunden [[Fossiel|fossielen]] bint zo'n 203 töt 245 miljoen jaor old en komt uut het [[Trias]] ([[Norien]] en [[Anisien]]).<ref name=":0" /><ref>Langer, M.C.; Ezcurra, M.D.; Bittencourt, J.S.; Novas, F.E. (2010). "The origin and early evolution of dinosaurs". ''Biological Reviews''. '''85''' (1): 55–110. doi:10.1111/j.1469-185X.2009.00094.x. <nowiki>PMID 19895605</nowiki>.</ref> Hieronder ku-j de [[cladogram]] zien van de ''Silesauridae''. De cladogram is baseerd up de volgende studies: Christian Kammerer, Sterling Nesbitt en Neil Shubin (2012) met clade terminologie van Cau (2018) en Martz en Small (2019).<ref name=":1" /><ref>Andrea Cau (2018). "The assembly of the avian body plan: a 160-million-year long process" (PDF). ''Bollettino della Società Paleontologica Italiana''. '''57''' (1): 1–25. doi:10.4435/BSPI.2018.01.</ref><ref>Martz, J.W.; Small, B.J. (2019). "Non-dinosaurian dinosauromorphs from the Chinle Formation (Upper Triassic) of the Eagle Basin, northern Colorado: ''Dromomeron romeri'' (Lagerpetidae) and a new taxon, ''Kwanasaurus williamparkeri'' (Silesauridae)". ''PeerJ''. '''7''': e7551. doi:10.7717/peerj.7551. PMC 6730537. <nowiki>PMID 31534843</nowiki>.</ref>
