--- a/6_augustus.mw
+++ b/6_augustus.mw
@@ -3,7 +3,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''6 augustus'''
 
 == Gebeurtenissen ==
 * [[1991]] - 't [[Frankriek|Franse]] [[auto]]mark [[Peugeot]] dut neet meer mee op de mark in de [[Verienigde Staoten van Amerika|VS]].
-* [[1945]] - [[Tweede Wereldoorlog]]: eerste [[atoombom]] wonnen of-ewörpen boven de [[Japan]]se stad [[Hiroshima (stad)|Hiroshima]]: 70.000 dooien
+* [[1945]] - [[Tweede Wereldoorlog]]: eerste [[atoombom]] wonnen of-ewörpen boven de [[Japan]]se stad [[Hiroshima (stad)|Hiroshima]]: 70.000 doden
 
 == Geboren ==
 * [[1881]] - [[Alexander Fleming]], Britse bacterioloog, ontdekker van de [[penicilline]] († [[1955]])
